--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "google-map-react": "^0.34.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-google-maps": "^9.4.5",
+    "recompose": "0.26"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
