--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/maps": "^0.4.6",
     "google-distance-matrix": "^1.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
