--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@google/maps": "^0.4.6",
-    "google-distance-matrix": "^1.1.1",
     "react": "^16.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
     "recompose": "0.26"
