--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
+    "react-pdf": "^3.0.4",
     "recompose": "0.26"
   },
   "devDependencies": {
