--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
     "react-pdf": "^3.0.4",
+    "react-router-dom": "^4.2.2",
     "recompose": "0.26"
   },
   "devDependencies": {
